--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.2
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
 dev_dependencies:
   build_runner: ^2.4.12
   flutter_lints: ^4.0.0
